# maltese-agent

./: .dockerignore  .gitignore  BUILDPLAN.md  CLAUDE.md  Cargo.toml  EVALUATION.md  LESSONS.md  README.md  SPEC.md  rust-toolchain.toml
.cargo/: audit.toml
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: ci.yml
.lattice/: config.json  context.md  ids.json
.lattice/events/: _lifecycle.jsonl  task_01KX5QMJYP6WCF6GHNW9V80AX9.jsonl  task_01KX5QMKHS35NNK716NCBVC4EC.jsonl  task_01KX5QMKWC00Z1HWYRSF2ECVE0.jsonl  task_01KX5QMMBAXVXEX4ZKDD740RM3.jsonl  task_01KX5QMMXAQHZW7S0EEJSS2V3N.jsonl  task_01KX5QMNMZFGJB22QTNAMGHQVW.jsonl  task_01KX5QMP5BXQHNY7AHJNAAAV75.jsonl  task_01KX5QMPM2KQN95QGKRD677FNS.jsonl  task_01KX5QMPYHZBATS2D6GXJEM9YR.jsonl  task_01KX5QMQCP5AQR3D1ZKYKGX6F4.jsonl  task_01KX5QMR7RYC0MNC852NJJCBV8.jsonl  task_01KX5QMRRCEXPH98T01Y2YHWD5.jsonl  task_01KX5QMS36XBZ9M6HH1ZNSXDJC.jsonl  task_01KX5QMSHGQ8ZKB2XS9VY5FFYY.jsonl  task_01KX5QMSRNTGWVM9RPCPJKJ621.jsonl  task_01KX5QMT6NK78HR2JASZMNQVZN.jsonl  task_01KX5QMTJMAMB49TXMVHJH882D.jsonl  task_01KX5QMTZA49D8AR66BGB9NMS6.jsonl  task_01KX5QMV6Y51F3W1GTNMYEYN1W.jsonl  task_01KX5QMVC798DJBP4886E98E89.jsonl  task_01KX5QMVKS29PFSQ16BPC1M2TH.jsonl  task_01KX5QMVRJ2NHMG4JD6QM5N428.jsonl  task_01KX5QMVYH8SNB2A3ZCD8BSHMH.jsonl  task_01KX5QMW38BFF2RX3YCS26S8RV.jsonl  task_01KX5QMWAXYHKJ9TK64J0WEMY5.jsonl  task_01KX6ADAT4D2YJMHK8MW8Y7D57.jsonl  task_01KX6YKY0R15RZJ6DN1NN437EV.jsonl  task_01KX70TQ91TWCX76T3AFJMCB2E.jsonl  task_01KX79586Y9XPQTM7N60FBB7HF.jsonl  task_01KX7EXZ01T69R3PBYRM4T91NB.jsonl  task_01KX7EYBW6CH8H5HZT4CXJMZFD.jsonl  task_01KX7EYSJ9E4TFRBPNH8WFGWTB.jsonl  task_01KX7JS176JNEA2G6783VDH7MX.jsonl  task_01KX7JSJWGT91BBMCSEBFEMM5V.jsonl  task_01KX7KH3J073HT92XK4NQWRZG5.jsonl  task_01KX7KH3X6Q8RRQJ521DQY6FV5.jsonl  task_01KX81T6YTHCXF8EDHDPX4FYKH.jsonl  task_01KX8K7QJ88E55WCEM7WBYA0CC.jsonl
docs/: tech-debt-2026-07-10.md
falcon-agent/: Cargo.toml  README.md
falcon-agent/src/: decoder.rs  interrogate.rs  lib.rs  llm.rs  main.rs  prompt.rs
falcon-agent/tests/: integration.rs
falcon-detective/: .gitignore  README.md  biome.json  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
falcon-mcp/: .dockerignore  Cargo.toml  Dockerfile  README.md  cloudbuild.deploy.yaml  cloudbuild.yaml
falcon-mcp/.gemini/: settings.example.json
falcon-mcp/src/: lib.rs  limits.rs  main.rs  sandbox.rs  server.rs  tool_error.rs
falcon-mcp/src/tools/: cargo.rs  cargo_test_clippy_diag.json  exec.rs  fs_ast.rs  fs_basic.rs  git.rs  mod.rs  prompt_lint.rs  subprocess.rs  util.rs
falcon-mcp/tests/: cargo_test.rs  error_codes_test.rs  exec_impostor_test.rs  exec_test.rs  fs_test.rs  git_test.rs  http_smoke.rs  prompt_lint_test.rs  timeout_test.rs
falcon-mcp/tests/fixtures/clippy-lints-crate/: Cargo.toml
falcon-mcp/tests/fixtures/clippy-lints-crate/src/: lib.rs
falcon-mcp/tests/fixtures/hanging-bin/: ast-grep  rg
falcon-mcp/tests/fixtures/hanging-crate/: Cargo.toml  build.rs
falcon-mcp/tests/fixtures/hanging-crate/src/: lib.rs
falcon-mcp/tests/fixtures/sample-crate/: Cargo.toml
falcon-mcp/tests/fixtures/sample-crate/src/: lib.rs
scripts/: check-planted-defects.sh  debt-gates.sh
sequence/: run-state.md
(+202 files in other folders)
