[package]
name = "falcon-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "MCP server exposing sandboxed dev tools for the falcon-detective coding agent"

[dependencies]
rmcp = { version = "1", features = ["server", "client", "transport-io", "transport-child-process", "transport-streamable-http-server", "macros"] }
schemars = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cargo_metadata = "0.18"
regex = "1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
