[package]
name = "falcon-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "MCP server exposing sandboxed dev tools for the falcon-detective coding agent"

[dependencies]
rmcp = { version = "2", features = ["server", "client", "transport-io", "transport-child-process", "transport-streamable-http-server", "macros"] }
schemars = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cargo_metadata = "0.23"
regex = "1"
glob = "0.3"
patch = "0.7"
axum = "0.8"
ignore = "0.4.28"
grep-searcher = "0.1.16"
grep-regex = "0.1.14"
grep-matcher = "0.1.8"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
